miint.output
Terminales no usados en la gramática

   COMILLAS


Estado 2 conflictos: 1 desplazamiento/reducción
Estado 5 conflictos: 1 desplazamiento/reducción, 1 reducción/reducción
Estado 6 conflictos: 6 desplazamiento/reducción
Estado 9 conflictos: 6 desplazamiento/reducción


Gramática

    0 $accept: vod $end

    1 $@1: %empty

    2 vod: $@1 body

    3 body: body declarefunc
    4     | declarefunc
    5     | sentencias
    6     | body sentencias

    7 sentencias: sentencias declare PYCOMA
    8           | sentencias inicializar PYCOMA
    9           | sentencias callfunc PYCOMA
   10           | sentencias imprime PYCOMA
   11           | sentencias si
   12           | sentencias mientras
   13           | sentencias PYCOMA
   14           | %empty

   15 $@2: %empty

   16 $@3: %empty

   17 si: SI $@2 ABREPAR cond CIERRAPAR $@3 ABRECOR sentencias CIERRACOR

   18 $@4: %empty

   19 $@5: %empty

   20 mientras: MIENTRAS $@4 ABREPAR cond CIERRAPAR $@5 ABRECOR sentencias CIERRACOR

   21 cond: identi MAYORQUE identi
   22     | identi MENORQUE identi
   23     | identi IGUAL identi
   24     | identi DIFERENTE identi

   25 imprime: IMPRIMIR ABREPAR IDENTIFICADOR CIERRAPAR

   26 callfunc: IDENTIFICADOR ABREPAR CIERRAPAR

   27 operacionent: ABREPAR operacionent CIERRAPAR
   28             | suma
   29             | resta
   30             | multiplicacion
   31             | division

   32 suma: identi SUMA identi
   33     | NUMERO SUMA NUMERO

   34 identi: identi IDENTIFICADOR
   35       | IDENTIFICADOR
   36       | identi ABREPAR identi CIERRAPAR
   37       | ABREPAR identi CIERRAPAR

   38 resta: identi RESTA identi
   39      | NUMERO RESTA NUMERO

   40 multiplicacion: identi MULTIPLICACION identi
   41               | NUMERO MULTIPLICACION NUMERO

   42 division: identi DIVISION identi
   43         | NUMERO DIVISION NUMERO

   44 declare: declare declareent
   45        | declare declarecad
   46        | declarecad
   47        | declareent

   48 $@6: %empty

   49 declarefunc: FUNCION IDENTIFICADOR ABREPAR CIERRAPAR $@6 ABRECOR sentencias CIERRACOR

   50 declareent: DECLAR ENT IDENTIFICADOR

   51 declarecad: DECLAR CAD IDENTIFICADOR ASIGNACION RISTRA
   52           | DECLAR CAD IDENTIFICADOR ASIGNACION identi CONCATENACION identi

   53 inicializar: inicializarent

   54 inicializarent: IDENTIFICADOR ASIGNACION identi
   55               | IDENTIFICADOR ASIGNACION NUMERO
   56               | IDENTIFICADOR ASIGNACION operacionent


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
MIENTRAS (258) 20
SI (259) 17
MAYORQUE (260) 21
MENORQUE (261) 22
IGUAL (262) 23
DIFERENTE (263) 24
IMPRIMIR (264) 25
DECLAR (265) 50 51 52
ASIGNACION (266) 51 52 54 55 56
PYCOMA (267) 7 8 9 10 13
FUNCION (268) 49
ABREPAR (269) 17 20 25 26 27 36 37 49
CIERRAPAR (270) 17 20 25 26 27 36 37 49
ABRECOR (271) 17 20 49
CIERRACOR (272) 17 20 49
COMILLAS (273)
SUMA (274) 32 33
RESTA (275) 38 39
MULTIPLICACION (276) 40 41
DIVISION (277) 42 43
CONCATENACION (278) 52
IDENTIFICADOR (279) 25 26 34 35 49 50 51 52 54 55 56
RISTRA (280) 51
CAD (281) 51 52
ENT (282) 50
NUMERO (283) 33 39 41 43 55


No terminales con las reglas donde aparecen

$accept (29)
    en la izquierda: 0
vod (30)
    en la izquierda: 2, en la derecha: 0
$@1 (31)
    en la izquierda: 1, en la derecha: 2
body (32)
    en la izquierda: 3 4 5 6, en la derecha: 2 3 6
sentencias (33)
    en la izquierda: 7 8 9 10 11 12 13 14, en la derecha: 5 6 7 8 9
    10 11 12 13 17 20 49
si (34)
    en la izquierda: 17, en la derecha: 11
$@2 (35)
    en la izquierda: 15, en la derecha: 17
$@3 (36)
    en la izquierda: 16, en la derecha: 17
mientras (37)
    en la izquierda: 20, en la derecha: 12
$@4 (38)
    en la izquierda: 18, en la derecha: 20
$@5 (39)
    en la izquierda: 19, en la derecha: 20
cond (40)
    en la izquierda: 21 22 23 24, en la derecha: 17 20
imprime (41)
    en la izquierda: 25, en la derecha: 10
callfunc (42)
    en la izquierda: 26, en la derecha: 9
operacionent (43)
    en la izquierda: 27 28 29 30 31, en la derecha: 27 56
suma (44)
    en la izquierda: 32 33, en la derecha: 28
identi (45)
    en la izquierda: 34 35 36 37, en la derecha: 21 22 23 24 32 34
    36 37 38 40 42 52 54
resta (46)
    en la izquierda: 38 39, en la derecha: 29
multiplicacion (47)
    en la izquierda: 40 41, en la derecha: 30
division (48)
    en la izquierda: 42 43, en la derecha: 31
declare (49)
    en la izquierda: 44 45 46 47, en la derecha: 7 44 45
declarefunc (50)
    en la izquierda: 49, en la derecha: 3 4
$@6 (51)
    en la izquierda: 48, en la derecha: 49
declareent (52)
    en la izquierda: 50, en la derecha: 44 47
declarecad (53)
    en la izquierda: 51 52, en la derecha: 45 46
inicializar (54)
    en la izquierda: 53, en la derecha: 8
inicializarent (55)
    en la izquierda: 54 55 56, en la derecha: 53


Estado 0

    0 $accept: . vod $end

    $default  reduce usando la regla 1 ($@1)

    vod  ir al estado 1
    $@1  ir al estado 2


Estado 1

    0 $accept: vod . $end

    $end  desplazar e ir al estado 3


Estado 2

    2 vod: $@1 . body

    FUNCION  desplazar e ir al estado 4

    FUNCION   [reduce usando la regla 14 (sentencias)]
    $default  reduce usando la regla 14 (sentencias)

    body         ir al estado 5
    sentencias   ir al estado 6
    declarefunc  ir al estado 7


Estado 3

    0 $accept: vod $end .

    $default  aceptar


Estado 4

   49 declarefunc: FUNCION . IDENTIFICADOR ABREPAR CIERRAPAR $@6 ABRECOR sentencias CIERRACOR

    IDENTIFICADOR  desplazar e ir al estado 8


Estado 5

    2 vod: $@1 body .
    3 body: body . declarefunc
    6     | body . sentencias

    FUNCION  desplazar e ir al estado 4

    $end      reduce usando la regla 2 (vod)
    $end      [reduce usando la regla 14 (sentencias)]
    FUNCION   [reduce usando la regla 14 (sentencias)]
    $default  reduce usando la regla 14 (sentencias)

    sentencias   ir al estado 9
    declarefunc  ir al estado 10


Estado 6

    5 body: sentencias .
    7 sentencias: sentencias . declare PYCOMA
    8           | sentencias . inicializar PYCOMA
    9           | sentencias . callfunc PYCOMA
   10           | sentencias . imprime PYCOMA
   11           | sentencias . si
   12           | sentencias . mientras
   13           | sentencias . PYCOMA

    MIENTRAS       desplazar e ir al estado 11
    SI             desplazar e ir al estado 12
    IMPRIMIR       desplazar e ir al estado 13
    DECLAR         desplazar e ir al estado 14
    PYCOMA         desplazar e ir al estado 15
    IDENTIFICADOR  desplazar e ir al estado 16

    MIENTRAS       [reduce usando la regla 5 (body)]
    SI             [reduce usando la regla 5 (body)]
    IMPRIMIR       [reduce usando la regla 5 (body)]
    DECLAR         [reduce usando la regla 5 (body)]
    PYCOMA         [reduce usando la regla 5 (body)]
    IDENTIFICADOR  [reduce usando la regla 5 (body)]
    $default       reduce usando la regla 5 (body)

    si              ir al estado 17
    mientras        ir al estado 18
    imprime         ir al estado 19
    callfunc        ir al estado 20
    declare         ir al estado 21
    declareent      ir al estado 22
    declarecad      ir al estado 23
    inicializar     ir al estado 24
    inicializarent  ir al estado 25


Estado 7

    4 body: declarefunc .

    $default  reduce usando la regla 4 (body)


Estado 8

   49 declarefunc: FUNCION IDENTIFICADOR . ABREPAR CIERRAPAR $@6 ABRECOR sentencias CIERRACOR

    ABREPAR  desplazar e ir al estado 26


Estado 9

    6 body: body sentencias .
    7 sentencias: sentencias . declare PYCOMA
    8           | sentencias . inicializar PYCOMA
    9           | sentencias . callfunc PYCOMA
   10           | sentencias . imprime PYCOMA
   11           | sentencias . si
   12           | sentencias . mientras
   13           | sentencias . PYCOMA

    MIENTRAS       desplazar e ir al estado 11
    SI             desplazar e ir al estado 12
    IMPRIMIR       desplazar e ir al estado 13
    DECLAR         desplazar e ir al estado 14
    PYCOMA         desplazar e ir al estado 15
    IDENTIFICADOR  desplazar e ir al estado 16

    MIENTRAS       [reduce usando la regla 6 (body)]
    SI             [reduce usando la regla 6 (body)]
    IMPRIMIR       [reduce usando la regla 6 (body)]
    DECLAR         [reduce usando la regla 6 (body)]
    PYCOMA         [reduce usando la regla 6 (body)]
    IDENTIFICADOR  [reduce usando la regla 6 (body)]
    $default       reduce usando la regla 6 (body)

    si              ir al estado 17
    mientras        ir al estado 18
    imprime         ir al estado 19
    callfunc        ir al estado 20
    declare         ir al estado 21
    declareent      ir al estado 22
    declarecad      ir al estado 23
    inicializar     ir al estado 24
    inicializarent  ir al estado 25


Estado 10

    3 body: body declarefunc .

    $default  reduce usando la regla 3 (body)


Estado 11

   20 mientras: MIENTRAS . $@4 ABREPAR cond CIERRAPAR $@5 ABRECOR sentencias CIERRACOR

    $default  reduce usando la regla 18 ($@4)

    $@4  ir al estado 27


Estado 12

   17 si: SI . $@2 ABREPAR cond CIERRAPAR $@3 ABRECOR sentencias CIERRACOR

    $default  reduce usando la regla 15 ($@2)

    $@2  ir al estado 28


Estado 13

   25 imprime: IMPRIMIR . ABREPAR IDENTIFICADOR CIERRAPAR

    ABREPAR  desplazar e ir al estado 29


Estado 14

   50 declareent: DECLAR . ENT IDENTIFICADOR
   51 declarecad: DECLAR . CAD IDENTIFICADOR ASIGNACION RISTRA
   52           | DECLAR . CAD IDENTIFICADOR ASIGNACION identi CONCATENACION identi

    CAD  desplazar e ir al estado 30
    ENT  desplazar e ir al estado 31


Estado 15

   13 sentencias: sentencias PYCOMA .

    $default  reduce usando la regla 13 (sentencias)


Estado 16

   26 callfunc: IDENTIFICADOR . ABREPAR CIERRAPAR
   54 inicializarent: IDENTIFICADOR . ASIGNACION identi
   55               | IDENTIFICADOR . ASIGNACION NUMERO
   56               | IDENTIFICADOR . ASIGNACION operacionent

    ASIGNACION  desplazar e ir al estado 32
    ABREPAR     desplazar e ir al estado 33


Estado 17

   11 sentencias: sentencias si .

    $default  reduce usando la regla 11 (sentencias)


Estado 18

   12 sentencias: sentencias mientras .

    $default  reduce usando la regla 12 (sentencias)


Estado 19

   10 sentencias: sentencias imprime . PYCOMA

    PYCOMA  desplazar e ir al estado 34


Estado 20

    9 sentencias: sentencias callfunc . PYCOMA

    PYCOMA  desplazar e ir al estado 35


Estado 21

    7 sentencias: sentencias declare . PYCOMA
   44 declare: declare . declareent
   45        | declare . declarecad

    DECLAR  desplazar e ir al estado 14
    PYCOMA  desplazar e ir al estado 36

    declareent  ir al estado 37
    declarecad  ir al estado 38


Estado 22

   47 declare: declareent .

    $default  reduce usando la regla 47 (declare)


Estado 23

   46 declare: declarecad .

    $default  reduce usando la regla 46 (declare)


Estado 24

    8 sentencias: sentencias inicializar . PYCOMA

    PYCOMA  desplazar e ir al estado 39


Estado 25

   53 inicializar: inicializarent .

    $default  reduce usando la regla 53 (inicializar)


Estado 26

   49 declarefunc: FUNCION IDENTIFICADOR ABREPAR . CIERRAPAR $@6 ABRECOR sentencias CIERRACOR

    CIERRAPAR  desplazar e ir al estado 40


Estado 27

   20 mientras: MIENTRAS $@4 . ABREPAR cond CIERRAPAR $@5 ABRECOR sentencias CIERRACOR

    ABREPAR  desplazar e ir al estado 41


Estado 28

   17 si: SI $@2 . ABREPAR cond CIERRAPAR $@3 ABRECOR sentencias CIERRACOR

    ABREPAR  desplazar e ir al estado 42


Estado 29

   25 imprime: IMPRIMIR ABREPAR . IDENTIFICADOR CIERRAPAR

    IDENTIFICADOR  desplazar e ir al estado 43


Estado 30

   51 declarecad: DECLAR CAD . IDENTIFICADOR ASIGNACION RISTRA
   52           | DECLAR CAD . IDENTIFICADOR ASIGNACION identi CONCATENACION identi

    IDENTIFICADOR  desplazar e ir al estado 44


Estado 31

   50 declareent: DECLAR ENT . IDENTIFICADOR

    IDENTIFICADOR  desplazar e ir al estado 45


Estado 32

   54 inicializarent: IDENTIFICADOR ASIGNACION . identi
   55               | IDENTIFICADOR ASIGNACION . NUMERO
   56               | IDENTIFICADOR ASIGNACION . operacionent

    ABREPAR        desplazar e ir al estado 46
    IDENTIFICADOR  desplazar e ir al estado 47
    NUMERO         desplazar e ir al estado 48

    operacionent    ir al estado 49
    suma            ir al estado 50
    identi          ir al estado 51
    resta           ir al estado 52
    multiplicacion  ir al estado 53
    division        ir al estado 54


Estado 33

   26 callfunc: IDENTIFICADOR ABREPAR . CIERRAPAR

    CIERRAPAR  desplazar e ir al estado 55


Estado 34

   10 sentencias: sentencias imprime PYCOMA .

    $default  reduce usando la regla 10 (sentencias)


Estado 35

    9 sentencias: sentencias callfunc PYCOMA .

    $default  reduce usando la regla 9 (sentencias)


Estado 36

    7 sentencias: sentencias declare PYCOMA .

    $default  reduce usando la regla 7 (sentencias)


Estado 37

   44 declare: declare declareent .

    $default  reduce usando la regla 44 (declare)


Estado 38

   45 declare: declare declarecad .

    $default  reduce usando la regla 45 (declare)


Estado 39

    8 sentencias: sentencias inicializar PYCOMA .

    $default  reduce usando la regla 8 (sentencias)


Estado 40

   49 declarefunc: FUNCION IDENTIFICADOR ABREPAR CIERRAPAR . $@6 ABRECOR sentencias CIERRACOR

    $default  reduce usando la regla 48 ($@6)

    $@6  ir al estado 56


Estado 41

   20 mientras: MIENTRAS $@4 ABREPAR . cond CIERRAPAR $@5 ABRECOR sentencias CIERRACOR

    ABREPAR        desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 47

    cond    ir al estado 58
    identi  ir al estado 59


Estado 42

   17 si: SI $@2 ABREPAR . cond CIERRAPAR $@3 ABRECOR sentencias CIERRACOR

    ABREPAR        desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 47

    cond    ir al estado 60
    identi  ir al estado 59


Estado 43

   25 imprime: IMPRIMIR ABREPAR IDENTIFICADOR . CIERRAPAR

    CIERRAPAR  desplazar e ir al estado 61


Estado 44

   51 declarecad: DECLAR CAD IDENTIFICADOR . ASIGNACION RISTRA
   52           | DECLAR CAD IDENTIFICADOR . ASIGNACION identi CONCATENACION identi

    ASIGNACION  desplazar e ir al estado 62


Estado 45

   50 declareent: DECLAR ENT IDENTIFICADOR .

    $default  reduce usando la regla 50 (declareent)


Estado 46

   27 operacionent: ABREPAR . operacionent CIERRAPAR
   37 identi: ABREPAR . identi CIERRAPAR

    ABREPAR        desplazar e ir al estado 46
    IDENTIFICADOR  desplazar e ir al estado 47
    NUMERO         desplazar e ir al estado 63

    operacionent    ir al estado 64
    suma            ir al estado 50
    identi          ir al estado 65
    resta           ir al estado 52
    multiplicacion  ir al estado 53
    division        ir al estado 54


Estado 47

   35 identi: IDENTIFICADOR .

    $default  reduce usando la regla 35 (identi)


Estado 48

   33 suma: NUMERO . SUMA NUMERO
   39 resta: NUMERO . RESTA NUMERO
   41 multiplicacion: NUMERO . MULTIPLICACION NUMERO
   43 division: NUMERO . DIVISION NUMERO
   55 inicializarent: IDENTIFICADOR ASIGNACION NUMERO .

    SUMA            desplazar e ir al estado 66
    RESTA           desplazar e ir al estado 67
    MULTIPLICACION  desplazar e ir al estado 68
    DIVISION        desplazar e ir al estado 69

    $default  reduce usando la regla 55 (inicializarent)


Estado 49

   56 inicializarent: IDENTIFICADOR ASIGNACION operacionent .

    $default  reduce usando la regla 56 (inicializarent)


Estado 50

   28 operacionent: suma .

    $default  reduce usando la regla 28 (operacionent)


Estado 51

   32 suma: identi . SUMA identi
   34 identi: identi . IDENTIFICADOR
   36       | identi . ABREPAR identi CIERRAPAR
   38 resta: identi . RESTA identi
   40 multiplicacion: identi . MULTIPLICACION identi
   42 division: identi . DIVISION identi
   54 inicializarent: IDENTIFICADOR ASIGNACION identi .

    ABREPAR         desplazar e ir al estado 70
    SUMA            desplazar e ir al estado 71
    RESTA           desplazar e ir al estado 72
    MULTIPLICACION  desplazar e ir al estado 73
    DIVISION        desplazar e ir al estado 74
    IDENTIFICADOR   desplazar e ir al estado 75

    $default  reduce usando la regla 54 (inicializarent)


Estado 52

   29 operacionent: resta .

    $default  reduce usando la regla 29 (operacionent)


Estado 53

   30 operacionent: multiplicacion .

    $default  reduce usando la regla 30 (operacionent)


Estado 54

   31 operacionent: division .

    $default  reduce usando la regla 31 (operacionent)


Estado 55

   26 callfunc: IDENTIFICADOR ABREPAR CIERRAPAR .

    $default  reduce usando la regla 26 (callfunc)


Estado 56

   49 declarefunc: FUNCION IDENTIFICADOR ABREPAR CIERRAPAR $@6 . ABRECOR sentencias CIERRACOR

    ABRECOR  desplazar e ir al estado 76


Estado 57

   37 identi: ABREPAR . identi CIERRAPAR

    ABREPAR        desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 47

    identi  ir al estado 77


Estado 58

   20 mientras: MIENTRAS $@4 ABREPAR cond . CIERRAPAR $@5 ABRECOR sentencias CIERRACOR

    CIERRAPAR  desplazar e ir al estado 78


Estado 59

   21 cond: identi . MAYORQUE identi
   22     | identi . MENORQUE identi
   23     | identi . IGUAL identi
   24     | identi . DIFERENTE identi
   34 identi: identi . IDENTIFICADOR
   36       | identi . ABREPAR identi CIERRAPAR

    MAYORQUE       desplazar e ir al estado 79
    MENORQUE       desplazar e ir al estado 80
    IGUAL          desplazar e ir al estado 81
    DIFERENTE      desplazar e ir al estado 82
    ABREPAR        desplazar e ir al estado 70
    IDENTIFICADOR  desplazar e ir al estado 75


Estado 60

   17 si: SI $@2 ABREPAR cond . CIERRAPAR $@3 ABRECOR sentencias CIERRACOR

    CIERRAPAR  desplazar e ir al estado 83


Estado 61

   25 imprime: IMPRIMIR ABREPAR IDENTIFICADOR CIERRAPAR .

    $default  reduce usando la regla 25 (imprime)


Estado 62

   51 declarecad: DECLAR CAD IDENTIFICADOR ASIGNACION . RISTRA
   52           | DECLAR CAD IDENTIFICADOR ASIGNACION . identi CONCATENACION identi

    ABREPAR        desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 47
    RISTRA         desplazar e ir al estado 84

    identi  ir al estado 85


Estado 63

   33 suma: NUMERO . SUMA NUMERO
   39 resta: NUMERO . RESTA NUMERO
   41 multiplicacion: NUMERO . MULTIPLICACION NUMERO
   43 division: NUMERO . DIVISION NUMERO

    SUMA            desplazar e ir al estado 66
    RESTA           desplazar e ir al estado 67
    MULTIPLICACION  desplazar e ir al estado 68
    DIVISION        desplazar e ir al estado 69


Estado 64

   27 operacionent: ABREPAR operacionent . CIERRAPAR

    CIERRAPAR  desplazar e ir al estado 86


Estado 65

   32 suma: identi . SUMA identi
   34 identi: identi . IDENTIFICADOR
   36       | identi . ABREPAR identi CIERRAPAR
   37       | ABREPAR identi . CIERRAPAR
   38 resta: identi . RESTA identi
   40 multiplicacion: identi . MULTIPLICACION identi
   42 division: identi . DIVISION identi

    ABREPAR         desplazar e ir al estado 70
    CIERRAPAR       desplazar e ir al estado 87
    SUMA            desplazar e ir al estado 71
    RESTA           desplazar e ir al estado 72
    MULTIPLICACION  desplazar e ir al estado 73
    DIVISION        desplazar e ir al estado 74
    IDENTIFICADOR   desplazar e ir al estado 75


Estado 66

   33 suma: NUMERO SUMA . NUMERO

    NUMERO  desplazar e ir al estado 88


Estado 67

   39 resta: NUMERO RESTA . NUMERO

    NUMERO  desplazar e ir al estado 89


Estado 68

   41 multiplicacion: NUMERO MULTIPLICACION . NUMERO

    NUMERO  desplazar e ir al estado 90


Estado 69

   43 division: NUMERO DIVISION . NUMERO

    NUMERO  desplazar e ir al estado 91


Estado 70

   36 identi: identi ABREPAR . identi CIERRAPAR

    ABREPAR        desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 47

    identi  ir al estado 92


Estado 71

   32 suma: identi SUMA . identi

    ABREPAR        desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 47

    identi  ir al estado 93


Estado 72

   38 resta: identi RESTA . identi

    ABREPAR        desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 47

    identi  ir al estado 94


Estado 73

   40 multiplicacion: identi MULTIPLICACION . identi

    ABREPAR        desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 47

    identi  ir al estado 95


Estado 74

   42 division: identi DIVISION . identi

    ABREPAR        desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 47

    identi  ir al estado 96


Estado 75

   34 identi: identi IDENTIFICADOR .

    $default  reduce usando la regla 34 (identi)


Estado 76

   49 declarefunc: FUNCION IDENTIFICADOR ABREPAR CIERRAPAR $@6 ABRECOR . sentencias CIERRACOR

    $default  reduce usando la regla 14 (sentencias)

    sentencias  ir al estado 97


Estado 77

   34 identi: identi . IDENTIFICADOR
   36       | identi . ABREPAR identi CIERRAPAR
   37       | ABREPAR identi . CIERRAPAR

    ABREPAR        desplazar e ir al estado 70
    CIERRAPAR      desplazar e ir al estado 87
    IDENTIFICADOR  desplazar e ir al estado 75


Estado 78

   20 mientras: MIENTRAS $@4 ABREPAR cond CIERRAPAR . $@5 ABRECOR sentencias CIERRACOR

    $default  reduce usando la regla 19 ($@5)

    $@5  ir al estado 98


Estado 79

   21 cond: identi MAYORQUE . identi

    ABREPAR        desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 47

    identi  ir al estado 99


Estado 80

   22 cond: identi MENORQUE . identi

    ABREPAR        desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 47

    identi  ir al estado 100


Estado 81

   23 cond: identi IGUAL . identi

    ABREPAR        desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 47

    identi  ir al estado 101


Estado 82

   24 cond: identi DIFERENTE . identi

    ABREPAR        desplazar e ir al estado 57
    IDENTIFICADOR  desplazar e ir al estado 47

    identi  ir al estado 102


Estado 83

   17 si: SI $@2 ABREPAR cond CIERRAPAR . $@3 ABRECOR sentencias CIERRACOR

    $default  reduce usando la regla 16 ($@3)

    $@3  ir al estado 103


Estado 84

   51 declarecad: DECLAR CAD IDENTIFICADOR ASIGNACION RISTRA .

    $default  reduce usando la regla 51 (declarecad)


Estado 85

   34 identi: identi . IDENTIFICADOR
   36       | identi . ABREPAR identi CIERRAPAR
   52 declarecad: DECLAR CAD IDENTIFICADOR ASIGNACION identi . CONCATENACION identi

    ABREPAR        desplazar e ir al estado 70
    CONCATENACION  desplazar e ir al estado 104
    IDENTIFICADOR  desplazar e ir al estado 75


Estado 86

   27 operacionent: ABREPAR operacionent CIERRAPAR .

    $default  reduce usando la regla 27 (operacionent)


Estado 87

   37 identi: ABREPAR identi CIERRAPAR .

    $default  reduce usando la regla 37 (identi)


Estado 88

   33 suma: NUMERO SUMA NUMERO .

    $default  reduce usando la regla 33 (suma)


Estado 89

   39 resta: NUMERO RESTA NUMERO .

    $default  reduce usando la regla 39 (resta)


Estado 90

   41 multiplicacion: NUMERO MULTIPLICACION NUMERO .

    $default  reduce usando la regla 41 (multiplicacion)


Estado 91

   43 division: NUMERO DIVISION NUMERO .

    $default  reduce usando la regla 43 (division)


Estado 92

   34 identi: identi . IDENTIFICADOR
   36       | identi . ABREPAR identi CIERRAPAR
   36       | identi ABREPAR identi . CIERRAPAR
